.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: zeus-dashboard
  name: zeus-dashboard
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      app: zeus-dashboard
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zeus-dashboard
    spec:
      containers:
      - image: afeezaziz/zeus-dashboard:latest
        imagePullPolicy: Always   
        name: zeus-dashboard
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
