.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zeus-dashboard
  labels:
    service: zeus-dashboard
  name: zeus-dashboard
spec:
  selector:
    app: zeus-dashboard
  ports:
  - port: 80
    targetPort: 80
