.k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: zeus-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "zeus-dashboard-prod"
spec:
  tls:
  - hosts:
    - zeus.pipeline.com.my
    secretName: echo-tls
  rules:
  - host: zeus.pipeline.com.my
    http:
      paths:
      - backend:
          serviceName: zeus-dashboard
          servicePort: 80
